# codeforces

./: .gitignore  CMakeLists.txt
ICPC/krsu/: длина_числа.cpp
ICPC/qualification_round_kg_2023_2024/: веселые_фонари.cpp  вместе_навсегда.cpp  выигрыш.cpp  дорога.cpp  есть_ли_сдача.cpp  много_ракушек.cpp  налоговый_вопрос.cpp  старый_шифр.cpp  чего-то_не_хватает.cpp
ICPC/topics/codeforces/merging_intervals/: merge_intervals.cpp
ICPC/topics/leetcode/binary_search/: binary_search.cpp  search_in_rotated_sorted_array.cpp
ICPC/topics/leetcode/dynamic_programming/: climbing_stairs.cpp  fibonacci.cpp
ICPC/topics/leetcode/greedy/: jump_game.cpp  lemonade_change.cpp
auca/algorithm_languages_I/complexity/: arithmetic_mean.cpp  average_numbers.cpp  polycarp_and_coins.cpp  summation_for_dummies_from_a_to_z.cpp
auca/algorithm_languages_I/events_and_scanline/: little_girl_and_maximum_sum.cpp  the_union_of_k_segments.cpp
auca/algorithm_languages_I/exchange_argument/: deadline.cpp  no_time_for_dragons.cpp  the_dragon_land.cpp  the_smallest_string_concatenation.cpp
auca/algorithm_languages_I/prefixes_and_suffixes/: duff_and_meat.cpp  find_a_multiple.cpp  ilya_and_queries.cpp  ladder.cpp  nikita_and_string.cpp  rectangles.cpp  sereja_and_suffixes.cpp  victor's_research.cpp
auca/algorithm_languages_I/two_pointers/: number_of_segments_with_big_sum.cpp  number_of_segments_with_small_sum.cpp  segment_with_big_sum.cpp  segment_with_small_sum.cpp
auca/competitive_programming_I/beginner/: chess.cpp  next_round.cpp  registration_system.cpp  watermelon.cpp  way_too_long_words.cpp
auca/competitive_programming_I/complexity/: arithmetic_mean.cpp  calculating_function.cpp  polycarp_and_coins.cpp
auca/competitive_programming_I/experienced/: burning_midnight_oil.cpp  carrots_for_rabbits.cpp  cd_pwd_commands.cpp  glass_carving.cpp  nice_matrix.cpp  single_wildcard_pattern_matching.cpp
auca/competitive_programming_I/implementation/: exponential_notation.cpp  interactive_bulls_and_cows_easy.cpp  interactive_bulls_and_cows_hard.cpp  jabber_id.cpp  kingdoms_and_alliances.cpp  meximum_array.cpp  snake_the_mathematician.cpp  treasure_island.cpp
auca/competitive_programming_I/math_ad_hoc/: forbidden_integer.cpp  kolya_and_tanya.cpp  longest_divisors_interval.cpp  moderate_modular_mode.cpp  plate_game.cpp  sea_battle.cpp  solo_mid_oracle.cpp
auca/data_structures/binary_trees/: balanced_binary_search_tree.cpp  binary_search_tree.cpp  binary_tree.cpp
auca/data_structures/dynamic_array/: devu_and_partitioning_of_the_array.cpp  dynamic_array.cpp  filtering.cpp  friendly_filtering.cpp
auca/data_structures/sets/: attendance_statistics.cpp  unique_strings.cpp
auca/data_structures/stack/: minimum_in_stack.cpp
auca/data_structures/static_arrays/: count_the_values.cpp  positions_in_permutations.cpp
codeforces/1000/: 2004B.cpp
codeforces/100_easy_problems/math_I/: little_c_loves_3_I.cpp
codeforces/100_easy_problems/primes_broken/: lost_rectangle.cpp
codeforces/100_easy_problems/sorting/: bubble_sort.cpp  new_year_garland.cpp  scores_in_order.cpp  selection_sort.cpp  the_price_is_right.cpp
codeforces/100_easy_problems/strings_arrays/: cashier.cpp  petya_and_strings.cpp  phone_numbers.cpp  reverse_an_array.cpp  string_task.cpp
codeforces/800/: 110A.cpp  112A.cpp  1154A.cpp  1283A.cpp  1343B.cpp  1352A.cpp  1353B.cpp  1367A.cpp  1367B.cpp  136A.cpp  1370A.cpp  1374A.cpp  1399A.cpp  144A.cpp  1472A.cpp  148A.cpp  1512A.cpp  151A.cpp  1520A.cpp  1535A.cpp  1551A.cpp  155A.cpp  1560A.cpp  1619A.cpp  1624A.cpp  1722A.cpp  1772A.cpp  1791A.cpp  1807A.cpp  1829A.cpp  1837A.cpp  266A.cpp  268A.cpp  271A.cpp  282A.cpp  339A.cpp  381A.cpp  427A.cpp  431A.cpp  432A.cpp  (+21 more)
codeforces/contests/: A.cpp  other.cpp
codeforces/contests/beta_round_1/: theatre_square.cpp
codeforces/itmo_academy_pilot_course/binary_search/: binary_search.cpp  closest_to_the_left.cpp  closest_to_the_right.cpp  fast_search.cpp
codeforces/practice_training_600_problems/week_1_difficulty_1000/: string_lcm.cpp
leetcode/all_topics/array/: two_sum.cpp
leetcode/all_topics/binary_search/: binary_search_tree_inorder_traversal.cpp  convert_sorted_array_to_binary_search_tree.cpp
leetcode/all_topics/two_pointers/: intersection_of_two_arrays_II.cpp
leetcode/basic_topics/arrays/: 11.cpp  best_time_to_buy_and_sell_stock.cpp  maximum_subarray.cpp  median_of_two_sorted_arrays.cpp  merge_intervals.cpp  rotate_array.cpp  two_sum.cpp
leetcode/basic_topics/linked_lists/: 206.cpp
leetcode/basic_topics/sorting_search/: binary_search.cpp
leetcode/basic_topics/strings/: 125.cpp  3.cpp  344.cpp  49.cpp  longest_repeating_character_replacement.cpp
leetcode/leetcode75/array_string/: can_place_flowers.cpp  greatest_common_divisor_of_strings.cpp  increasing_triplet_subsequence.cpp  kids_with_greatest_number_of_candies.cpp  merge_strings_alternatively.cpp  product_of_array_except_self.cpp  reverse_vowels_of_string.cpp  reverse_words_in_string.cpp  string_compression.cpp
leetcode/leetcode75/bit_manipulation/: 136.cpp
leetcode/leetcode75/hash_map_set/: 1207.cpp  2215.cpp
leetcode/leetcode75/prefix_sum/: 1732.cpp  724.cpp
leetcode/leetcode75/sliding_window/: longest_subarray_of_1s_after_deleting_one_element.cpp  max_consecutive_ones_III.cpp  maximum_average_subarray.cpp  maximum_number_of_vowels_in_a_substring_of_given_length.cpp
leetcode/leetcode75/stack/: removing_stars_from_a_string.cpp  sliding_window_maximum.cpp  valid_parentheses.cpp
leetcode/leetcode75/two_pointers/: container_with_most_water.cpp  is_subsequence.cpp  max_number_of_k_sum_pairs.cpp  move_zeroes.cpp
problem_set/800/: 1030A.cpp  110A.cpp  112A.cpp  116A.cpp  1328A.cpp  1352A.cpp  136A.cpp  1433A.cpp  144A.cpp  151A.cpp  1535A.cpp  1619A.cpp  1669A.cpp  1692A.cpp  1760A.cpp  1772A.cpp  1791A.cpp  1807A.cpp  1829A.cpp  1837A.cpp  1850A.cpp  1915A.cpp  1950A.cpp  1985A.cpp  1999A.cpp  200B.cpp  263A.cpp  266A.cpp  266B.cpp  271A.cpp  281A.cpp  282A.cpp  32A.cpp  339A.cpp  344A.cpp  41A.cpp  427A.cpp  443A.cpp  467A.cpp  469A.cpp  (+15 more)
problem_set/900/: 96A.cpp
(+19 files in other folders)
