cmake_minimum_required(VERSION 3.26)
project(codeforces)

set(CMAKE_CXX_STANDARD 17)

add_executable(codeforces
#        problem_set/800/4A.cpp
#        problem_set/800/271A.cpp
#        problem_set/800/136A.cpp
#        problem_set/800/1915A.cpp
#        problem_set/800/1352A.cpp
#        problem_set/800/1807A.cpp
#        problem_set/800/443A.cpp
#        problem_set/800/1829A.cpp
#        problem_set/800/1850A.cpp
#        problem_set/800/1791A.cpp
#        problem_set/800/1535A.cpp
#        problem_set/800/1950A.cpp
#        problem_set/800/1030A.cpp
#        problem_set/800/1985A.cpp
#        problem_set/800/339A.cpp
#        problem_set/800/467A.cpp
#        problem_set/800/1760A.cpp
#        problem_set/800/1669A.cpp
#        problem_set/800/427A.cpp
#        problem_set/800/510A.cpp
#        problem_set/800/520A.cpp
#        problem_set/800/1837A.cpp
#        problem_set/800/705A.cpp
#        problem_set/800/1328A.cpp
        problem_set/800/996A.cpp
        problem_set/800/151A.cpp
        #        problem_set/800/distance_problem.cpp
        #        problem_set/800/472A.cpp
#        problem_set/800/1692A.cpp
#        problem_set/900/96A.cpp
#        problem_set/800/1772A.cpp
#        problem_set/800/1999A.cpp
#        problem_set/800/677A.cpp
#        problem_set/800/116A.cpp
#        problem_set/800/266B.cpp
#        problem_set/800/344A.cpp
#        problem_set/800/136A.cpp
#        problem_set/800/200B.cpp
#        problem_set/800/469A.cpp
#        problem_set/800/144A.cpp
        #        problem_set/800/41A.cpp
#        problem_set/800/50A.cpp
#        problem_set/800/59A.cpp
#        problem_set/800/110A.cpp
#        problem_set/800/71A.cpp
#        problem_set/800/112A.cpp
#        problem_set/800/116A.cpp
#        problem_set/800/263A.cpp
#        problem_set/800/266A.cpp
#        problem_set/800/281A.cpp
#        problem_set/800/282A.cpp
#        problem_set/800/339A.cpp
#        problem_set/800/546A.cpp
#        problem_set/800/617A.cpp
#        problem_set/800/677A.cpp
#        problem_set/800/791A.cpp
#        problem_set/800/977A.cpp

)
